--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <!-- Use title if it's in the page YAML frontmatter -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <%= metamagic title: "C&C Search" %>
+        <%= metamagic title: "Biscuit Recruitment" %>
         <%= stylesheet_link_tag "application" %>
         <link rel="shortcut icon" href="favicon.ico">
 
@@ -20,21 +20,6 @@
           <script type="text/javascript" src="/assets/ss-standard.js"></script>
           <script type="text/javascript" src="/assets/ss-social.js"></script>
         <![endif]-->
-
-        <script type="text/javascript" src="//use.typekit.net/fmu8ctv.js"></script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-        <script>
-        var _prum = [['id', '53452821abe53d960760dbc2'],
-                     ['mark', 'firstbyte', (new Date()).getTime()]];
-        (function() {
-            var s = document.getElementsByTagName('script')[0]
-              , p = document.createElement('script');
-            p.async = 'async';
-            p.src = '//rum-static.pingdom.net/prum.min.js';
-            s.parentNode.insertBefore(p, s);
-        })();
-        </script>
 
         <%= javascript_include_tag :modernizr %>
     </head>
@@ -56,15 +41,6 @@
         <% end %>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-50748263-1', 'candcsearch.co.uk');
-          ga('send', 'pageview');
-        </script>
 
         <% if Rails.env.development? %>
             <%= javascript_include_tag :gridset_overlay %>
