--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,37 +1,3 @@
-<footer class='d-all t-all m-all'>
-  <div class="wrapper">
-    <section class="d1-d4 t1-t4">
-      <h3>Newsletter</h3>
-      <p>
-        Get all the latest job and company updates straight to your inbox
-      </p>
+<footer>
 
-      <%= form_for NewsletterSubscriber.new, url: newsletter_subscribers_path do |f| %>
-        <%= f.text_field :email, placeholder: 'Email Address' %>
-        <div class="send-btn">
-          <a href="#" onclick="document.getElementById('new_newsletter_subscriber').submit()" id="newsletter_subscription_submit" class="ss-icon ss-standard">send</a>
-        </div>
-      <% end %>
-
-    </section>
-    <section class="d5-d8 t5-t7">
-      <h3>Contact</h3>
-      <p>Call us on: 0203 475 3885</p>
-      <p>Email us at: <a href="mailto:info@candcsearch.co.uk">info@candcsearch.co.uk</a></p>
-    </section>
-
-    <section class="d9-d12 t1-t4">
-      <h3>Connect</h3>
-      <div class="social-icons ss-icon ss-social-regular">
-        <%= link_to 'Facebook', 'https://www.facebook.com/candcsearch', :target => '_blank' %>
-        <%= link_to 'twitter', 'https://twitter.com/CandCSearch', :target => '_blank' %>
-      </div>
-    </section>
-    <div class="sub-footer d-all t-all m-all">
-      <div class="copyright">
-        <p>copyright © C&amp;C Search. All rights reserved</p>
-      </div>
-      <a href="http://soloweb.com"><%= image_tag 'soloweb-logo.png', class: 'soloweb-logo' %></a>
-    </div>
-  </div>
 </footer>
