changed database settings

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,24 @@
 <%
-meta :description => "Our services cover Permanent, Contract and Interim opportunities from Junior Buyer to Procurement Director Level and everything in between."
+meta :description => ""
 %>
+<div class="header-image">
+  
+</div>
+<div class="wrapper">
+  <div class="home-col1">
+    
+  </div>
+  <div class="home-col2 sidebar">
+    <div class="search">
+      <h2>Search</h2>
+      <form action="" class='vacancy_search'>
+        <select name="category" id="category">
+          <option value="">Construction</option>
+          <option value="">Education</option>
+        </select>
+        <input type="checkbox" name="vacancy_type" value="Perm" >
+        <input type="checkbox" name="vacancy_type" value="Temp">
+      </form>
+    </div>
+  </div>
+</div>
