--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
           <script type="text/javascript" src="/assets/ss-social.js"></script>
         <![endif]-->
 
+        <script src="//use.typekit.net/pej2upe.js"></script>
+        <script>try{Typekit.load();}catch(e){}</script>
+
         <%= javascript_include_tag :modernizr %>
     </head>
     <body>
