--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,33 @@
 <footer>
+  <div class="wrapper">
+  <div class="cols">
+    <div class="col">
+      <h3>Contact</h3>
+      <ul class="contact">
+        <li><span class="ss-icon ss-gizmo">&#x1F4DE;</span>0234 567 899</li>
+        <li><span class="ss-icon ss-gizmo">&#x2709;</span>info@biscuitrecruitment.com</li>
+      </ul>
+    </div>
 
+    <div class="col">
+      <h3>Connect</h3>
+      <ul class="social">
+        <li><span class="ss-icon ss-social-regular">&#xF611;</span>Twitter</li>
+        <li><span class="ss-icon ss-social-regular">&#xF612;</span>Linkedin</li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <h3>Newsletter</h3>
+      <p>Get the latest job and company
+  updates straight to your inbox</p>
+      <form action="" class="new_newsletter_subscriber">
+        <input type="text" placeholder="Email Address">
+        <input type="submit" class='ss-icon ss-standard' value="&#xE350;">
+      </form>
+    </div>
+  </div>
+    <div class="copyright">copyright © biscuit recruitment. All rights reserved</div>
+    <%= image_tag 'soloweb-logo-white-small.png', class: 'soloweb-logo' %>
+  </div>
 </footer>
