--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,9 @@
 <header>
   <div class="wrapper">
     Biscuit recruitment
+    <div class="menu-toggle">
+      Menu
+      <span class="ss-icon ss-standard">&#xE9A1;</span>
+    </div>
   </div>
 </header>
