--- a/app/assets/stylesheets/base/site_settings.scss
+++ b/app/assets/stylesheets/base/site_settings.scss
@@ -10,4 +10,10 @@ $medium-grey: #dedede;
 $medium-dark-grey: #c6c6c6;
 $dark-grey: #505050;
 
+$font1: "didot";
 $font2: "proxima-nova";
+$grey-text: #9c9c9c;
+
+$light: 300;
+$regular: 400;
+$bold: 700;
