moved activeadmin resource code out of model

--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -224,6 +224,7 @@ footer .new_newsletter_subscriber {
     float: left;
     text-transform: uppercase;
     width: 210px;
+    color: $grey-text;
   }
   input[type='submit'] {
     color: $yellow;
