--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,6 +4,7 @@
     <div class="menu-toggle">
       Menu
       <span class="ss-icon ss-standard">&#xE9A1;</span>
+      <div class="main-menu"></div>
     </div>
   </div>
 </header>
