--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -21,10 +21,10 @@
       <h3>Newsletter</h3>
       <p>Get the latest job and company
   updates straight to your inbox</p>
-      <form action="" class="new_newsletter_subscriber">
-        <input type="text" placeholder="Email Address">
-        <input type="submit" class='ss-icon ss-standard' value="&#xE350;">
-      </form>
+      <%= form_for NewsletterSubscriber.new do |f| %>
+        <%= f.text_field :email, placeholder: 'Email Address' %>
+        <%= f.submit 'send', class: 'ss-icon ss-standard' %>
+      <% end %>
     </div>
   </div>
     <div class="copyright">copyright © biscuit recruitment. All rights reserved</div>
