--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -47,6 +47,48 @@ header .menu-toggle {
     float: right;
   }
 }
+header .main-menu {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: $yellow;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 100;
+  opacity: 0.9;
+}
+header .main-menu .close {
+  float: right;
+  color: $dark-grey;
+  font-size: 14px;
+  margin: 45px 30px 0 0;
+  span {
+    font-size: 18px;
+    margin: -2px 0 0 5px;
+    color: $dark-grey;
+  }
+}
+header .main-menu ul {
+  margin-top: 180px;
+  font-family: $font1;
+  font-weight: $bold;
+}
+header .main-menu li {
+  float: left;
+  clear: left;
+  width: 100%;
+  text-align: center;
+  color: $dark-grey;
+  height: 100px;
+  font-size: 52px;
+  padding: 15px 0;
+  box-sizing: border-box;
+  &:hover {
+    background: $dark-grey;
+    color: $yellow;
+  }
+}
 .header-image {
   width: $header-image-width;
   margin: 0 auto;
