--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,22 @@
     <div class="menu-toggle">
       Menu
       <span class="ss-icon ss-standard">&#xE9A1;</span>
-      <div class="main-menu"></div>
+      <div class="main-menu">
+        <div class="close">
+          close
+          <span class="ss-icon ss-standard">&#x2421;</span>
+        </div>
+        <ul>
+          <li>Home</li>
+          <li>Jobs</li>
+          <li>About Us</li>
+          <li>Candidates</li>
+          <li>Join Us</li>
+          <li>Clients</li>
+          <li>Blog</li>
+          <li>Contract</li>
+        </ul>
+      </div>
     </div>
   </div>
 </header>
