added menu animation

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,14 @@
 <header>
   <div class="wrapper">
     Biscuit recruitment
-    <div class="menu-toggle">
+    <a class="menu-toggle" href='javascript:void(0)'>
       Menu
       <span class="ss-icon ss-standard">&#xE9A1;</span>
       <div class="main-menu">
-        <div class="close">
+        <a class="close" href='javascript:void(0)'>
           close
           <span class="ss-icon ss-standard">&#x2421;</span>
-        </div>
+        </a>
         <ul>
           <li>Home</li>
           <li>Jobs</li>
@@ -20,6 +20,6 @@
           <li>Contract</li>
         </ul>
       </div>
-    </div>
+    </a>
   </div>
 </header>
