--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -40,6 +40,8 @@ header .menu-toggle {
   font-size: 14px;
   font-weight: $light;
   text-transform: uppercase;
+  color: $grey-text;
+  text-decoration: none;
   span {
     color: $yellow;
     font-size: 18px;
@@ -49,6 +51,7 @@ header .menu-toggle {
 }
 header .main-menu {
   position: absolute;
+  display: none;
   width: 100%;
   height: 100%;
   background: $yellow;
@@ -57,15 +60,21 @@ header .main-menu {
   bottom: 0;
   z-index: 100;
   opacity: 0.9;
+  -webkit-animation-duration: 0.5s;
+  -moz-animation-duration: 0.5s;
+  animation-duration: 0.5s;
 }
 header .main-menu .close {
-  float: right;
   color: $dark-grey;
+  float: right;
   font-size: 14px;
   margin: 45px 30px 0 0;
+  text-decoration: none;
+  text-transform: uppercase;
   span {
     font-size: 18px;
     margin: -2px 0 0 5px;
+    float: right;
     color: $dark-grey;
   }
 }
