main menu now takes links from database

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,5 @@
 <%
-meta :title => @page.title + " | C&C Search",
+meta :title => @page.title + " | Biscuit Recruitment",
      :description => @page.meta_description,
      :keywords => @page.meta_keywords
 %>
