--- a/app/views/vacancies/show.html.erb
+++ b/app/views/vacancies/show.html.erb
@@ -1,4 +1,4 @@
 <%
-meta :title => @vacancy.title + " | C&C Search",
+meta :title => @vacancy.title + " | Biscuit Recruitment",
      :description => sanitize(@vacancy.description[0,180])
 %>
