--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -88,15 +88,22 @@ header .main-menu li {
   clear: left;
   width: 100%;
   text-align: center;
-  color: $dark-grey;
   height: 100px;
   font-size: 52px;
-  padding: 15px 0;
+  color: $dark-grey;
   box-sizing: border-box;
   &:hover {
     background: $dark-grey;
-    color: $yellow;
+    a { color: $yellow; }
   }
+}
+header .main-menu li a {
+  color: $dark-grey;
+  text-decoration: none;
+  float: left;
+  width: 100%;
+  height: 100%;
+  padding: 15px 0;
 }
 .header-image {
   width: $header-image-width;
