--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -133,6 +133,16 @@ header .main-menu li a {
   @include gs-span(d, 1, 8);
   font-size: 22px;
 }
+.homepage .block-align-right h3 {
+  float: right;
+}
+.homepage .block-align-left h3 {
+  float: left;
+}
+.homepage .block-align-left p {
+  float: right;
+  margin-right: 0;
+}
 .homepage .title-block {
   @include gs-span(d, all);
   background: $black;
