--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,26 +12,18 @@ meta :description => ""
       the 'can do' agency partner
     </div>
 
-    <div class="block" style="background: url('assets/floor.png');">
-      <p>
-        Biscuit Recruitment specialises in 
-        support staff recruitment for a diverse range of businesses from to small start-ups to global companies.
-        With an exceptional delivery record and robust recruitment process, 
-        Biscuit aims to complete every assignment successfully with care, dedication and passion.
-      </p>
-    </div>
+    <% HomepageBlock.order('position').each do |homepage_block| %>
+      <div class="block <%= homepage_block.alignment_class %>" style="background: url('<%= homepage_block.image.url %>');">
+        <% if homepage_block.title? %>
+          <h3><%= homepage_block.title %></h3>
+        <% end %>
 
-    <div class="block" style="background: url('assets/steps.png');">
-      <h3>CANDIDATES</h3>
-    </div>
+        <% if homepage_block.text? %>
+          <p><%= homepage_block.text %></p>
+        <% end %>
+      </div>
+    <% end %>
 
-    <div class="block" style="background: url('assets/sky.png');">
-      <h3>Clients</h3>
-    </div>
-
-    <div class="block" style="background: url('assets/buildings.png');">
-      <h3>Join Us</h3>
-    </div>
   </div>
   <div class="col2 sidebar">
     <div class="search">
