--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,10 +30,12 @@ meta :description => ""
       <h3>Search</h3>
       <form action="" class='vacancy_search'>
         <label for="category">Job Category</label>
-        <select name="category" id="category">
-          <option value="">Construction</option>
-          <option value="">Education</option>
-        </select>
+        <div class="styled-select">
+          <select name="category" id="category">
+            <option value="">Construction</option>
+            <option value="">Education</option>
+          </select>
+        </div>
         <label for="category">Vacancy Type</label>
         <div class="radio-buttons">
           <input type="radio" name="vacancy_type" value="Perm" >
