search is working

--- a/app/views/shared/_search_box.html.erb
+++ b/app/views/shared/_search_box.html.erb
@@ -7,11 +7,11 @@
     </div>
     <label for="category">Vacancy Type</label>
     <div class="radio-buttons">
-      <input type="radio" name="vacancy_type" value="permanent" checked="true" >
+      <input type="radio" name="vacancy_type" value="Permanent" checked="true" >
       Perm
-      <input type="radio" name="vacancy_type" value="temporary">
+      <input type="radio" name="vacancy_type" value="Temporary">
       Temp
-      <input type="radio" name="vacancy_type" value="contract">
+      <input type="radio" name="vacancy_type" value="Contract">
       Contract
     </div>
 
