--- a/app/assets/stylesheets/layout/_desktop.scss
+++ b/app/assets/stylesheets/layout/_desktop.scss
@@ -1,3 +1,6 @@
 @media only screen and (min-width:1140px) {
-
+  header .main-menu li:hover {
+    background: $dark-grey;
+    a { color: $yellow; }
+  }
 }
