--- a/app/assets/stylesheets/layout/_tablet.scss
+++ b/app/assets/stylesheets/layout/_tablet.scss
@@ -1,6 +1,36 @@
-@media only screen and (min-width:768px) and (max-width:1140px) {
-
+@media only screen and (min-width:768px) and (max-width:1139px) {
+  h4 {
+    font-size: 22px;
+  }
+  h5 {
+    font-size: 20px;
+  }
+  .wrapper {
+    width: 95%;
+    margin: 0 2.5%;
+  }
+  .header-image {
+    width: 100%;
+  }
+  header .main-menu ul {
+    margin-top: 60px;
+  }
+  .latest-jobs .job {
+    min-height: 325px;
+    height: inherit;
+  }
+  .latest-jobs .job p {
+    margin-top: 0;
+  }
+  footer .col {
+    @include gs-span(t, 1, 3);
+    @include gs-float(t, left);
+  }
+  footer .new_newsletter_subscriber input[type='text'] {
+    width: 60%;
+  }
 }
-@media only screen and (min-width:768px) and (max-width:1140px) and (orientation:portrait) {
+
+@media only screen and (min-width:768px) and (max-width:1139px) and (orientation:portrait) {
 
 }
