--- a/app/views/shared/_search_box.html.erb
+++ b/app/views/shared/_search_box.html.erb
@@ -1,4 +1,4 @@
-<div class="search">
+<div class="search-box">
   <h3>Search</h3>
   <form action="/vacancies" class='vacancy_search'>
     <label for="category">Job Category</label>
