--- a/app/views/vacancies/index.html.erb
+++ b/app/views/vacancies/index.html.erb
@@ -1,8 +1,53 @@
+<div class="header-image">
+  <div class="wrapper">
+    <%= render 'shared/search_box' %>
+  </div>
+</div>
 <div class="wrapper">
+  <h1 class="page-title">jobs</h1>
   <% if @vacancies.count > 0 %>
-    <% @vacancies.each do |vacancy| %>
-      <%= vacancy.title %>
-    <% end %>
+    <div class="job-list">
+      <% @vacancies.each do |vacancy| %>
+        <div class="job">
+          <h4><%= vacancy.title %></h4>
+          <div class="social">
+            share job:
+            <div class="ss-icon ss-social-regular">
+              <a href="#">&#x2709;</a>
+              <a href="#">&#xF612;</a>
+              <a href="#">&#xF611;</a>
+              <a href="#">&#xF610;</a>
+            </div>
+          </div>
+
+          <div class="job-desc">
+            <%= sanitize vacancy.description %>
+          </div>
+
+          <div class="job-info">
+            <div class="job-attr">
+              <h5>Duration</h5>
+              <p><%= vacancy.vacancy_type %></p>
+            </div>
+
+            <div class="job-attr">
+              <h5>Location</h5>
+              <p><%= vacancy.location %></p>
+            </div>
+
+            <div class="job-attr">
+              <h5>Salary</h5>
+              <p><%= vacancy.salary_information %></p>
+            </div>
+          </div>
+
+          <a href='<%= vacancy_path(vacancy) %>' class="arrow-btn">
+            More Info
+            <span class='ss-icon ss-gizmo arrow'>&#x27A1;</span>
+          </a>
+        </div>
+      <% end %>
+    </div>
   <% else %>
     <p>No vacancies found.</p>
   <% end %>
