--- a/app/assets/stylesheets/layout/_mobile.scss
+++ b/app/assets/stylesheets/layout/_mobile.scss
@@ -7,6 +7,11 @@
     width: 100%;
     height: 345px;
   }
+  .header-image .search-box {
+    @include gs-span(m, all);
+    box-sizing: border-box;
+    padding: 15px;
+  }
   header .main-menu ul {
     margin-top: 0;
   }
@@ -36,6 +41,23 @@
   }
   .homepage .block-double h3, p {
     margin-top: 0;
+  }
+
+  .job-list .job {
+    float: left;
+    height: auto;
+    min-height: 300px;
+  }
+  .job-list .job .job-info {
+    position: relative;
+    float: left;
+    left: 0;
+    height: auto;
+  }
+  .job-list .job .social {
+    float: left;
+    margin: 10px 0;
+    font-size: 20px;
   }
 
   .latest-jobs .job {
