--- a/app/views/vacancies/index.html.erb
+++ b/app/views/vacancies/index.html.erb
@@ -21,7 +21,8 @@
           </div>
 
           <div class="job-desc">
-            <%= sanitize vacancy.description %>
+            <%= sanitize vacancy.description[0, 200] %>
+            <%= '...' if sanitize(vacancy.description).size > 200 %>
           </div>
 
           <div class="job-info">
