--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,3 +3,12 @@ meta :title => @page.title + " | Biscuit Recruitment",
      :description => @page.meta_description,
      :keywords => @page.meta_keywords
 %>
+<div class="header-image">
+</div>
+
+<div class="wrapper">
+  <h1 class="page-title"><%= @page.title %></h1>
+  <div class="page-content">
+    <%= raw(@page.content) %>
+  </div>
+</div>
