--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -275,6 +275,20 @@ header .main-menu li a {
   margin: 20px 0 0 0;
   padding: 20px;
 }
+.page-content ul {
+  list-style-type: disc;
+  padding: 0 0 0 20px;
+  margin: 0;
+}
+.page-content li {
+  margin: 5px 0 5px 0;
+  float: left;
+  clear: left;
+  padding-left: 15px;
+}
+.page-content p {
+  margin-bottom: 30px;
+}
 form {
   font-weight: $light;
   label {
@@ -398,4 +412,10 @@ footer .copyright {
 footer .soloweb-logo {
   float: right;
   margin: 25px 0 0 0;
+}
+
+@media only screen and (min-width:320px) and (max-width: 1399px){
+  .header-image {
+    width: 100%;
+  }
 }
