--- a/app/assets/stylesheets/layout/_general.scss
+++ b/app/assets/stylesheets/layout/_general.scss
@@ -325,9 +325,17 @@ form {
     }
   }
   input[type='text'] {
+    float: left;
+    clear: left;
     border-radius: 0px;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
+    width: 100%;
+  }
+  textarea {
+    float: left;
+    clear: left;
+    width: 100%;
   }
   input[type='submit'] {
     background: $black;
@@ -341,6 +349,74 @@ form {
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
   }
+}
+.contact-page form input[type='text'] {
+  height: 45px;
+  background: $medium-grey;
+  border: 0;
+  margin: 0 0 20px 0;
+  padding: 15px;
+  box-sizing: border-box;
+}
+.contact-page form input[type='submit'] {
+  float: left;
+  width: auto;
+  padding: 15px 60px;
+}
+.contact-page form textarea {
+  min-height: 85px;
+  background: $medium-grey;
+  border: 0;
+  margin: 0 0 20px 0;
+  padding: 15px;
+  box-sizing: border-box;
+}
+.contact-page .page-content {
+  @include gs-span(d, 1, 7);
+  height: 405px;
+}
+.contact-page .contact-info {
+  @include gs-span(d, 8, 12);
+  background: $white;
+  height: 405px;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-top: 20px;
+}
+.contact-page .contact-info h3 {
+  text-transform: lowercase;
+}
+.contact-page .contact-info h4 {
+  text-transform: none;
+  margin: 20px 0 0 0;
+  font-size: 24px;
+  font-weight: $bold;
+}
+.contact-page .contact-info p {
+  text-transform: uppercase;
+  font-size: 18px;
+  margin: 5px 0 0 0;
+  font-weight: $light;
+}
+.contact-page .contact-info ul {
+  margin: 5px 0 0 0;
+  font-weight: $light;
+}
+.contact-page .contact-info ul li {
+  margin: 0 0 10px 0;
+}
+.contact-page .contact-info ul span {
+  margin: 2px 10px 0 0;
+  float: left;
+}
+.contact-page .contact-info .social li {
+  float: left;
+  margin: 0 15px 0 0;
+  font-size: 18px;
+}
+.contact-page .contact-info .social li a {
+  color: $black;
+  text-decoration: none;
 }
 
 footer {
